rust/surrealdb-orm-tests/tests/snapshots/query_ifelse__if_else_statement.snap
---
source: surrealdb-orm-tests/tests/query_ifelse.rs
expression: queries.to_raw().build()
---
LET $val = 7;

LET $name = 'Oyelowo';

IF $val > 8 THEN
	(SELECT * FROM space_ship)
ELSE IF $name = 'Oyelowo' THEN
	(SELECT * FROM weapon)
ELSE
	5
END
