rust/surrealdb-orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_macro-2.snap
---
source: surrealdb-orm-tests/tests/query_ifelse.rs
expression: queries_1.fine_tune_params()
---
LET $val = $_param_00000001;

LET $name = $_param_00000002;

IF $val > $_param_00000003 THEN
	$_param_00000004
ELSE IF $name = $_param_00000005 THEN
	$_param_00000006
ELSE
	$_param_00000007
END
