rust/surrealdb-orm-tests/tests/snapshots/query_ifelse__if_else_statement_and_let_with_block_macro-2.snap
---
source: surrealdb-orm-tests/tests/query_ifelse.rs
expression: queries_1.fine_tune_params()
---
LET $val = $_param_00000001;

LET $oye_name = $_param_00000002;

LET $select_space_ship = $_param_00000003;

LET $query_result = $_param_00000004;

RETURN $query_result;
